updated resume after internship at apl

--- a/resume.tex
+++ b/resume.tex
@@ -21,13 +21,10 @@
 \begin{resume}
 \section{\mysidestyle Contact \\ Information} \vspace{2mm}
 	\begin{asparablank}
-		\item 6445 Sundown Trail \hfill (410) 599-3550
-		\item Columbia MD 21044 \hfill josephbatchik@gmail.com
-		\item \rurl{http://github.com/JDrit/}
+		\item \hfill (410) 599-3550
+		\item \hfill josephbatchik@gmail.com
+		\item \rurl{http://jd.batchik.net/}
 	\end{asparablank}
-
-\section{\mysidestyle Objective}
-	 I am looking for a co-op at Rochester Institute of Technology to expand my skills in the Computer Service field.
 
 \section{\mysidestyle Education}
 	\begin{compactdesc}
@@ -41,11 +38,11 @@
 \section{\mysidestyle Experience}
 	\begin{asparadesc}
         \employer{John Hopkins University Applied Physics Laboratory}{Laurel, MD}{Summer 2013}{Summer Intern}{http://jhuapl.edu/}
-        Worked on implementation of a telescope control system to allow scientists to automate data collection and control mutliple telescopes remotely.
+        Implemented a sensor management system used to control and collect data from multiple telescope remotely. This allows scientists to automate data collection and control mutliple telescopes remotely.
         \normalsize
         \\
 		\employer{Six3 Systems, Inc.}{Fulton, MD}{Summer 2012}{Summer Intern}{http://six3esd.com/}
-		I worked in a group developing a course for employees to learn about various big data solutions such as Hadoop, HBase, etc. I also helped set up and maintained a Hadoop / MapReduce cluster. 
+		I worked in a group developing a course for employees to learn about about big data solutions such as Hadoop, HBase, etc. . 
 		\normalsize
 		\\
 		\employer{SRA, International}{Columbia, MD}{Summer 2012}{Summer Intern}{http://sra.com/}
@@ -57,7 +54,7 @@
 		\normalsize
 		\\
 		\employer{Computer Science Corporation}{Hanover, MD}{Summer 2011}{Summer Intern}{http://csc.com/}
-		Worked on a thin client lab setup used in demonstration to various government agencies. Worked with other engineers to maintain a server room and keep it functioning in a good environment.
+		Worked on a thin client lab setup used in demonstration to various government agencies. Worked with other engineers to maintain a server room and keep it functioning.
 		\normalsize
 	\end{asparadesc}
 
@@ -66,7 +63,6 @@
 		\item[Fluent Languages] \begin{inparaenum} { \small
 			\item Java
 			\item Python
-			\item HTML / CSS
 		} \end{inparaenum}
 		\item[Operating Systems] \begin{inparaenum} { \small
 			\item Various Linux distributions
@@ -79,10 +75,26 @@
 			\item Regular Expressions
 		} \end{inparaenum}
 		\item[Certifications] \begin{inparaenum} { \small
-			\item Cloudera Certified Developer for Apache Hadoop, 2012
+		    \item Cloudera Certified Developer for Apache Hadoop, 2012
 		} \end{inparaenum}
+        \item[Tools] \begin{inparaenum} { \small
+            \item git
+            \item svn
+            \item ant
+            \item vim
+            \item eclipse
+            \item Google Protocol Buffers
+        } \end{inparaenum}
 	\end{compactdesc}
 
+\section{\mysidestyle Projects}
+    \begin{asparablank}
+        \item {\bf Android WebNews:} Wrote an Android application to allow Android users to read and edit the Computer Science House's internal news network on a native application.
+        \normalsize
+        \\
+        \item {\bf Wiki Racing:} Wrote a python webserver that would find the shortest path between any two articles on Wikipedia by only clicking on links on the page
+        \normalsize
+    \end{asparablank}
 \section{\mysidestyle Clubs \& Activities}
 	\begin{asparablank}
 		\item CSH ({\small Computer Science House}) \rurl{http://www.csh.rit.edu/}
