--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 	pdfborder={0 0 0},
 	unicode=true
 }
-\marginsize{0.375in}{1.875in}{0.375in}{0.375in}
+\marginsize{0.375in}{1.875in}{0.600in}{0.375in}
 \setdefaultitem{\footnotesize \textbullet}{}{}{}{}{}
 \setdefaultleftmargin{0em}{}{}{}{}{}
 \setdefaultenum{(a)}{(1)}{}{}{}{}
@@ -19,44 +19,23 @@
 \begin{document}
 \name{\Large Joseph D. Batchik}
 \begin{resume}
-\section{\mysidestyle Contact \\ Information} \vspace{2mm}
+\section{\mysidestyle Contact \\ Information}
 	\begin{asparablank}
-		\item \hfill (410) 599-3550
-		\item \hfill josephbatchik@gmail.com
+		\item 6445 Sundown Trail \hfill (410) 599-3550
+		\item Columbia MD, 21044 \hfill josephbatchik@gmail.com
 		\item \rurl{http://jd.batchik.net/}
 	\end{asparablank}
 
+\section{\mysidestyle Objective}
+    I am seeking a summer co-op.
+
 \section{\mysidestyle Education}
 	\begin{compactdesc}
-		\item[Rochester Institute of Technology] - Rochester, NY \rdate{2012 - Present}
+		\item[Rochester Institute of Technology] - Rochester, NY \rdate{2012 - 2016}
 		\begin{compactitem} { \small
-			\item Computer Science Major
-			\item Dean's List (3.65 GPA)
+            \item Computer Science Major \hfill Dean's List (3.65 GPA)
 		} \end{compactitem}
 	\end{compactdesc}
-
-\section{\mysidestyle Experience}
-	\begin{asparadesc}
-		\employer{John Hopkins University Applied Physics Laboratory}{Laurel, MD}{Summer 2013}{Summer Intern}{http://jhuapl.edu/}
-		Implemented a sensor management system used to control and collect data from multiple telescopes remotely. Languages / tools used: Java, ant, svn, SQL, Google Protocol Buffers.
-		\normalsize
-		\\
-		\employer{Six3 Systems, Inc.}{Fulton, MD}{Summer 2012}{Summer Intern}{http://six3esd.com/}
-		Worked in a group developing a course for employees to learn about about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase, Accumulo.  
-		\normalsize
-		\\
-		\employer{SRA, International}{Columbia, MD}{Summer 2012}{Summer Intern}{http://sra.com/}
-		Worked on developing software to monitor server rooms that would monitor servers' downtime and issues. Also assisted with data backup and protection. Languages / tooles used: Python web servers, svn.
-		\normalsize
-		\\
-		\employer{RTGX - Ross Technology, Inc}{Baltimore, MD}{Summer 2011}{System Administration Intern}{http://rtgx.com/}
-		Worked with fellow system administrators to run the main offices. Worked with various wireless routers and computer hardware to provide support to other employees. 
-		\normalsize
-		\\
-		\employer{Computer Science Corporation}{Hanover, MD}{Summer 2011}{Summer Intern}{http://csc.com/}
-		Worked on a thin client lab setup used in demonstration to various government agencies. Worked with other engineers to maintain a server room and keep it functioning. Languages / tools used: VMware, thin clients.
-		\normalsize
-	\end{asparadesc}
 
 \section{\mysidestyle Technical Skills \& Certifications}
 	\begin{compactdesc}
@@ -86,6 +65,30 @@
             \item Google Protocol Buffers
         } \end{inparaenum}
 	\end{compactdesc}
+
+\section{\mysidestyle Experience}
+	\begin{asparadesc}
+		\employer{John Hopkins University Applied Physics Laboratory}{Laurel, MD}{Summer 2013}{Summer Intern}{http://jhuapl.edu/}
+		Implemented a sensor management system used to control and collect data from multiple telescopes remotely. Languages / tools used: Java, ant, svn, SQL, Google Protocol Buffers.
+		\normalsize
+		\\
+		\employer{Six3 Systems, Inc.}{Fulton, MD}{Summer 2012}{Summer Intern}{http://six3esd.com/}
+		Worked in a group developing a course for employees to learn about about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase, Accumulo.  
+		\normalsize
+		\\
+		\employer{SRA, International}{Columbia, MD}{Summer 2012}{Summer Intern}{http://sra.com/}
+		Worked on developing software to monitor server rooms that would monitor servers' downtime and issues. Also assisted with data backup and protection. Languages / tooles used: Python web servers, svn.
+		\normalsize
+		\\
+		\employer{RTGX - Ross Technology, Inc}{Baltimore, MD}{Summer 2011}{System Administration Intern}{http://rtgx.com/}
+		Worked with fellow system administrators to run the main offices. Worked with various wireless routers and computer hardware to provide support to other employees. 
+		\normalsize
+		\\
+		\employer{Computer Science Corporation}{Hanover, MD}{Summer 2011}{Summer Intern}{http://csc.com/}
+		Worked on a thin client lab setup used in demonstration to various government agencies. Worked with other engineers to maintain a server room and keep it functioning. Languages / tools used: VMware, thin clients.
+		\normalsize
+	\end{asparadesc}
+
 
 \section{\mysidestyle Projects}
     \begin{asparablank}
