minor grammer checks

--- a/resume.tex
+++ b/resume.tex
@@ -150,7 +150,7 @@ Accumulo.}
 \section{Clubs \& Activities}
 CSH (Computer Science House) \hfill \href{http://csh.rit.edu/}{http://csh.rit.edu} \\
 \begin{sloppypar}
-An organization at RIT that provides a living and learning enviroment with access to unique facalities, hands-on learning, all in a social enviroment.\\
+An organization at RIT that provides a living and learning enviroment with access to unique facilities, hands-on learning, all in a social enviroment.\\
 \end{sloppypar}
 US FIRST Robotics Team 2537 \hfill \href{http://first.raidtech.net}{http://first.raidtech.net} \\
 \begin{sloppypar}
@@ -234,7 +234,7 @@ Tools
         {\bf CSH Hosing Site:} Wrote a python webserver to allow for room registration for future room assignments for members of the Computer Science House.\\
     \end{sloppypar}
     \begin{sloppypar}
-        {\bf Wiki Racing:} Wrote a python webserver that would find the shortest path between any two articles on Wikipedia by only clicking on links on the page.
+        {\bf Wiki Racing:} Wrote a python webserver that would find the shortest path between any two articles on Wikipedia by only clicking on links on the page. \\
     \end{sloppypar}
 
 %----------------------------------------------------------------------------------------
@@ -247,7 +247,7 @@ Tools
     {\bf 2012 - Maryland Math Engineering Science Achievement \\}Won 1st place in both regional and state level competitions for developing a maze transversal algorithm in python.
 \end{sloppypar}
 
-%------------------------------------------------
+%----------------------------------------------------------------------------------------
 
 \begin{sloppypar}
     {\bf 2012 - Website Excellence Award, FIRST Robotics \\}Developed and maintained an award winning website.
