--- a/resume.tex
+++ b/resume.tex
@@ -212,7 +212,7 @@ Computer Concepts
 & Android development, \\
 & Regular Expressions \\
 & \\
-Certifiations
+Certifications
 & Cloudera Certified Developer \\
 & for Apache Hadoop, 2012 \\
 & \\
