Updated resume to include amazon

--- a/resume.tex
+++ b/resume.tex
@@ -86,6 +86,16 @@
 %----------------------------------------------------------------------------------------
 
 \section{Work Experience} 
+%------------------------------------------------
+% WORK EXPERIENCE 0
+%------------------------------------------------
+
+{\raggedleft\textsc{Spring 2014 - Seattle WA}\par}
+
+{\raggedright\large Amazon \\
+\textit{Software Developer Engineer Intern}  \hfill {\small \href{http://amazon.com}{http://amazon.com}}\\ [5pt]}
+
+\normalsize{Worked with various Amazon cloud products such as CloudSearch, SNS, and SQS to develop an internal search tool for the Enterprise Data Warehouse team. Languages used: Java}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 1
@@ -107,8 +117,7 @@
 {\raggedright\large Six3 Systems, Inc. \\
 \textit{Summer Intern} \hfill {\small \href{http://six3esd.com}{http://six3esd.com}} \\[5pt]}
 
-\normalsize{Worked in a group developing a course for employees to learn about about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase,
-Accumulo.}
+\normalsize{Worked in a group developing a course for employees to learn about about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase}
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
@@ -119,7 +128,7 @@ Accumulo.}
 {\raggedright\large SRA, International \\
 \textit{Summer Intern} \hfill {\small \href{http://sra.com}{http://sra.com}} \\[5pt]}
 
-\normalsize{Worked on developing software to monitor server rooms' downtime and issues. Also assisted with data backups and data protection. Languages / tools used: Python web servers, svn.}\\
+\normalsize{Worked on developing software to monitor server rooms' downtime and delt with data backups.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 4
@@ -130,7 +139,7 @@ Accumulo.}
 {\raggedright\large RTGX - Ross Technology, Inc. \\
 \textit{Summer Intern} \hfill {\small \href{http://rtgx.com}{http://rtgx.com}} \\[5pt]}
 
-\normalsize{Worked with fellow system administrators to run the main offices. Worked with various wireless routers and computer hardware to provide support to other employees.} \\
+\normalsize{Worked with fellow system administrators to run the main offices.} \\
 
 %------------------------------------------------
 % WORK EXPERIENCE 5
@@ -141,7 +150,7 @@ Accumulo.}
 {\raggedright\large Computer Science Corporation \\
     \textit{Summer Intern } \hfill {\small \href{http://cscc.om}{http://csc.com}} \\[5pt]} 
 
-\normalsize{ Worked on a thin client lab setup used in demonstration to various government agencies. Worked with other engineers to maintain a server room and keep it functioning. Languages / tools used: VMWare, thin clients} \\
+\normalsize{ Worked on a thin client lab setup used in demonstration to various government agencies.} \\
 
 %----------------------------------------------------------------------------------------
 %	CLUBS & ACTIVITIES
@@ -201,23 +210,23 @@ Was part of a robotics team in which I built and maintained the team's award win
 
 \begin{tabular}{rl}
 Languages
-& java, python, HTML \\ 
+& Java, Python, HTML/CSS, \\ 
+& Ruby, C \\ 
 & \\
 Operating Systems
-& Various Linux distributions, \\
+& Arch, Red Hat, Ubuntu, \\
 & Windows XP / 7 / 8 \\
 & \\
-Computer Concepts
+Concepts
 & Hadoop, SQL, \\
 & Android development, \\
-& Regular Expressions \\
 & \\
 Certifications
 & Cloudera Certified Developer \\
 & for Apache Hadoop, 2012 \\
 & \\
 Tools
-& git, svn, ant, vim, eclipse, \\
+& git, svn, ant, vim, eclipse, rails \\
 & Google Protocol Buffers \\
 & \\
 \end{tabular}
@@ -231,12 +240,12 @@ Tools
         {\bf CSH News:} Wrote an Android application to allow users to read and edit the Computer Science House's internal news network on a native application. \\
     \end{sloppypar} 
     \begin{sloppypar}
-        {\bf CSH Hosing Site:} Wrote a python webserver to allow for room registration for future room assignments for members of the Computer Science House.\\
+        {\bf CSH Hosing Site:} A Python webserver to allow for room registration for future room assignments for members of the Computer Science House.\\
     \end{sloppypar}
     \begin{sloppypar}
-        {\bf Wiki Racing:} Wrote a python webserver that would find the shortest path between any two articles on Wikipedia by only clicking on links on the page. \\
+        {\bf CSH Profiles:} A Ruby on Rails web server that is a interface to the LDAP servers that are used to store user information. Uses  SASL authentication with WebAuth to provide security. \\
     \end{sloppypar}
-
+    
 %----------------------------------------------------------------------------------------
 %	AWARDS
 %----------------------------------------------------------------------------------------
