--- a/resume.tex
+++ b/resume.tex
@@ -211,11 +211,11 @@ Was part of a robotics team in which I built and maintained the team's award win
 \begin{tabular}{rl}
 Languages
 & Java, Python, HTML/CSS, \\ 
-& Ruby, C \\ 
+& Ruby, Go, C \\ 
 & \\
-Operating Systems
+OS
 & Arch, Red Hat, Ubuntu, \\
-& Windows XP / 7 / 8 \\
+& Windows 7 / 8 \\
 & \\
 Concepts
 & Hadoop, SQL, \\
