Minor changes to resume

--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 
 \documentclass[10pt]{article} % Font size - 10pt, 11pt or 12pt
 
-\usepackage[hmargin=1.25cm, vmargin=1.5cm]{geometry} % Document margins
+\usepackage[hmargin=1.25cm, vmargin=1.0cm]{geometry} % Document margins
 
 \usepackage{marvosym} % Required for symbols in the colored box
 \usepackage{ifsym} % Required for symbols in the colored box
@@ -95,7 +95,7 @@
 {\raggedright\large Amazon \\
 \textit{Software Developer Engineer Intern}  \hfill {\small \href{http://amazon.com}{http://amazon.com}}\\ [5pt]}
 
-\normalsize{Worked with various Amazon cloud products such as CloudSearch, SNS, and SQS to develop an internal search tool for the Enterprise Data Warehouse team. Languages used: Java}\\
+\normalsize{Worked with various Amazon cloud products such as CloudSearch, SNS, and SQS to develop an internal search tool for the Enterprise Data Warehouse team. Languages / tools used: Java, various AWS products}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 1
