changes for summer internship at Google

--- a/resume.tex
+++ b/resume.tex
@@ -80,12 +80,43 @@
 
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
-	
+
+%----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+
+\section{Education} 
+
+\begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
+
+%------------------------------------------------
+% EDUCATION 1
+%------------------------------------------------
+
+2012 -- 2016 & \textbf{Rochester Institute of Technology} \\ 
+& \textsc{Computer Science Major} \\ 
+& \textit{Dean's List (3.60 GPA)}\\
+& Rochester, New York \\
+\end{tabular}\\[10pt]
+
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
 
 \section{Work Experience} 
+
+%------------------------------------------------
+% WORK EXPERIENCE -1
+%------------------------------------------------
+
+{\raggedleft\textsc{Summer 2014 - New York NY}\par}
+
+{\raggedright\large Google \\
+\textit{Engineering Practicum Intern}  \hfill {\small \href{http://google.com}{http://google.com}}\\ [5pt]}
+
+\normalsize{Worked on load testing infrastructure. Also worked on fixing bugs 
+in a variety of Google SRE software. Languages / tools used: Java, Python, 
+various Google datastores}
 
 %------------------------------------------------
 % WORK EXPERIENCE 0
@@ -96,7 +127,9 @@
 {\raggedright\large Amazon \\
 \textit{Software Developer Engineer Intern}  \hfill {\small \href{http://amazon.com}{http://amazon.com}}\\ [5pt]}
 
-\normalsize{Worked with various Amazon cloud products such as CloudSearch, SNS, and SQS to develop an internal search tool for the Enterprise Data Warehouse team. Languages / tools used: Java, various AWS products}\\
+\normalsize{Worked with various Amazon cloud products such as CloudSearch, SNS, 
+and SQS to develop an internal search tool for the Enterprise Data Warehouse 
+team. Languages / tools used: Java, various AWS products}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 1
@@ -153,19 +186,6 @@
 
 \normalsize{ Worked on a thin client lab setup used in demonstration to various government agencies.} \\
 
-%----------------------------------------------------------------------------------------
-%	CLUBS & ACTIVITIES
-%----------------------------------------------------------------------------------------
-
-\section{Clubs \& Activities}
-CSH (Computer Science House) \hfill \href{http://csh.rit.edu/}{http://csh.rit.edu} \\
-\begin{sloppypar}
-An organization at RIT that provides a living and learning enviroment with access to unique facilities, hands-on learning, all in a social enviroment.\\
-\end{sloppypar}
-US FIRST Robotics Team 2537 \hfill \href{http://first.raidtech.net}{http://first.raidtech.net} \\
-\begin{sloppypar}
-Was part of a robotics team in which I built and maintained the team's award winning website. \\
-\end{sloppypar}
 \end{minipage} % End the left-hand side of the page
 \hfill
 \begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
@@ -186,24 +206,6 @@ Was part of a robotics team in which I built and maintained the team's award win
 }\\[10pt]
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
-
-\section{Education} 
-
-\begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
-
-%------------------------------------------------
-% EDUCATION 1
-%------------------------------------------------
-
-2012 -- 2016 & \textbf{Rochester Institute of Technology} \\ 
-& \textsc{Computer Science Major} \\ 
-& \textit{Dean's List (3.60 GPA)}\\
-& Rochester, New York \\
-\end{tabular}\\[10pt]
-
-%----------------------------------------------------------------------------------------
 %	Skills
 %----------------------------------------------------------------------------------------
 
@@ -211,24 +213,16 @@ Was part of a robotics team in which I built and maintained the team's award win
 
 \begin{tabular}{rl}
 Languages
-& Java, Python, HTML/CSS, \\ 
+& Python, Java, HTML/CSS, \\ 
 & Ruby, Go, C \\ 
-& \\
-OS
-& Arch, Red Hat, Ubuntu, \\
-& Windows 7 / 8 \\
-& \\
-Concepts
-& Hadoop, SQL, \\
-& Android development, \\
 & \\
 Certifications
 & Cloudera Certified Developer \\
 & for Apache Hadoop, 2012 \\
 & \\
 Tools
-& git, svn, ant, vim, eclipse, rails \\
-& Google Protocol Buffers \\
+& git, svn, vim, rails, postgreSQL \\
+& Google Protocol Buffers, perforce \\
 & \\
 \end{tabular}
 
@@ -256,15 +250,31 @@ Tools
 \begin{sloppypar}
     {\bf 2012 - Maryland Math Engineering Science Achievement \\}Won 1st place in both regional and state level competitions for developing a maze transversal algorithm in python.
 \end{sloppypar}
-
+\bigskip
 %----------------------------------------------------------------------------------------
 
 \begin{sloppypar}
-    {\bf 2012 - Website Excellence Award, FIRST Robotics \\}Developed and maintained an award winning website.
+    {\bf 2012 - Website Excellence Award, FIRST Robotics \\}Developed and maintained 
+    an award winning website for my school's FIRST robotics team.
 \end{sloppypar}
 
+\bigskip
 %----------------------------------------------------------------------------------------
-	
+
+%----------------------------------------------------------------------------------------
+%	CLUBS & ACTIVITIES
+%----------------------------------------------------------------------------------------
+
+\section{Clubs \& Activities}
+CSH (Computer Science House) \hfill \href{http://csh.rit.edu/}{http://csh.rit.edu} \\
+\begin{sloppypar}
+An organization at RIT that provides a living and learning enviroment with access to unique facilities, hands-on learning, all in a social enviroment.\\
+\end{sloppypar}
+Robotics Team 2537 \hfill \href{http://first.raidtech.net}{http://first.raidtech.net} \\
+\begin{sloppypar}
+Was part of a robotics team in which I built and maintained the team's award winning website. \\
+\end{sloppypar}
+
 \end{minipage} % End right-hand side of the page
 
 \end{document}  
